--- a/frontend/src/styles/imports/base/_variables.scss
+++ b/frontend/src/styles/imports/base/_variables.scss
@@ -33,7 +33,8 @@ $landscape: ' and (orientation: landscape)';
     --font-color-light-primary: #ffffff;
     --font-color-light-secondary: #E8E8E8;
 
-    --bg-color-dark-primary: #1D1D1D;
+    --bg-color-dark-primary: #131313;
+    --bg-color-dark-secondary: #212121;
     --bg-color-light-primary: #ffffff;
     --bg-color-light-secondary: #FFF8EF;
 
