--- a/frontend/src/styles/imports/base/_common.scss
+++ b/frontend/src/styles/imports/base/_common.scss
@@ -1,6 +1,7 @@
 html {
     height: 100%;
 	font-size: var(--font-size-default);
+    scroll-behavior: smooth;
 }
 body {
     font-family: var(--font-family-primary);
