--- a/frontend/src/styles/imports/layout/_header.scss
+++ b/frontend/src/styles/imports/layout/_header.scss
@@ -4,15 +4,24 @@
 	top: 0;
 	left: 0;
 	z-index: 100;
+	&:before {
+		display: block;
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.8);
+	}
 }
 .header-row {
 	margin: 0;
 	> div[class*='col'] {
-		position: relative;
 		padding-top: 1.5rem;
 		padding-bottom: 1.5rem;
-		padding-left: 2rem;
-		padding-right: 2rem;
+	}
+	&__lang {
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 }
 
