--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -14,5 +14,6 @@
 
 @import "./imports/sections/_index";
 @import "./imports/sections/_projects-list";
+@import "./imports/sections/_services-list";
 
 @import "./imports/extra/_preloaders";
