--- a/frontend_new/src/app/[lang]/_assets/styles/globals.css
+++ b/frontend_new/src/app/[lang]/_assets/styles/globals.css
@@ -16,5 +16,9 @@
 }
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  background-color: #FFFFFF;
+}
+
+.text-primary1 {
+  @apply text-lime-900 font-bold hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
 }/*# sourceMappingURL=globals.css.map */
