--- a/frontend_new/src/app/[lang]/_assets/styles/globals.scss
+++ b/frontend_new/src/app/[lang]/_assets/styles/globals.scss
@@ -26,3 +26,9 @@ body {
     //     )
     //     rgb(var(--background-start-rgb));
 }
+
+
+.text-primary1 {
+    @apply text-lime-900 font-bold hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+}
+
