--- a/frontend_new/src/assets/styles/globals.scss
+++ b/frontend_new/src/assets/styles/globals.scss
@@ -29,7 +29,7 @@ body {
 
 
 .text-primary1 {
-    @apply text-lime-900 font-bold hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    @apply text-lime-300 font-bold hover:bg-blue-200/[.3];
 }
 
 p {
@@ -41,4 +41,16 @@ p {
         margin-bottom: 0;
     }
 }
+
+// view transitions (test)
+//@media not (prefers-reduced-motion: reduce) { // disable the morph effect for people who get motion sickness
+	// .cx-view-transition-logo {
+    //     view-transition-name: logo;
+    // }
+//}
+// ::view-transition-old(root),
+// ::view-transition-new(root) {
+//     animation-duration: 1s;
+// }
+
 
